[package]
name = "tank"
version = "1.0.0"
authors = ["arctan95"]
edition = "2021"
license = "Apache-2.0"
description = "The Operator plugging you into The Matrix"

[package.metadata.bundle]
name = "Tank"
identifier = "io.github.arctan95.tank"
icon = ["assets/icons/32x32.png", "assets/icons/128x128.png", "assets/icons/128x128@2x.png"]
copyright = "Copyright (c) 2025 arctan95. All rights reserved."

[dependencies]
chrono = "0.4"
env_logger = "0.11"
include_dir = "0.7"
wgpu = "28.0"
winit = { version = "0.30"}
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.24"
anyhow = "1.0"
cgmath = "0.18"